<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gázóra Bejelentés</string>
    <string name="app_logo">Alkalmazás logó</string>
    <string name="login">Bejelentkezés</string>
    <string name="email">Email cím</string>
    <string name="password">Jelszó</string>
    <string name="forgot_password">Elfelejtette jelszavát?</string>
    <string name="register_prompt">Még nincs fiókja? Regisztráljon most!</string>
    <string name="register">Regisztráció</string>
    <string name="full_name">Teljes név</string>
    <string name="meter_number">Gázóra azonosító</string>
    <string name="confirm_password">Jelszó megerősítése</string>
    <string name="login_prompt">Már van fiókja? Jelentkezzen be!</string>
    <string name="registration_successful">Sikeres regisztráció!</string>
    <string name="error_required_field">Ez a mező kötelező</string>
    <string name="error_invalid_email">Érvénytelen email cím</string>
    <string name="error_password_too_short">A jelszónak legalább 6 karakterből kell állnia</string>
    <string name="error_passwords_dont_match">A jelszavak nem egyeznek</string>
    <string name="logout">Kijelentkezés</string>

    <!-- Főoldal szövegek -->
    <string name="welcome_message">Üdvözöljük a Gázóra Bejelentés alkalmazásban!</string>
    <string name="welcome_user">Üdvözöljük, %1$s!</string>
    <string name="last_reading">Utolsó leolvasás: %1$s - %2$s m³</string>
    <string name="last_reading_value">Utolsó leolvasás: %1$s - %2$.1f m³</string>
    <string name="no_readings_yet">Még nincs rögzített mérőóra állás</string>
    <string name="new_reading">Új óraállás bejelentése</string>
    <string name="meter_reading">Óraállás (m³)</string>
    <string name="submit_reading">Bejelentés</string>
    <string name="reading_history">Korábbi leolvasások</string>
    <string name="reading_history_title">Leolvasási előzmények</string>
    <string name="view_all">Összes megtekintése</string>
    <string name="add_reading">Új leolvasás hozzáadása</string>

    <!-- Előzmények oldal -->
    <string name="edit_reading">Leolvasás szerkesztése</string>
    <string name="delete_reading">Leolvasás törlése</string>
    <string name="back_to_main">Vissza a főoldalra</string>
    <string name="delete_confirmation">Biztosan törölni szeretné ezt a leolvasást?</string>
    <string name="yes">Igen</string>
    <string name="no">Nem</string>
    <string name="save">Mentés</string>
    <string name="cancel">Mégse</string>
    <string name="reading_updated">Leolvasás frissítve</string>
    <string name="reading_deleted">Leolvasás törölve</string>
    <string name="update_error">Hiba a frissítés során</string>
    <string name="delete_error">Hiba a törlés során</string>

    <!-- Új szövegek a kamera és naptár funkciókhoz -->
    <string name="take_photo">Fotó készítése</string>
    <string name="set_reminder">Emlékeztető</string>
    <string name="permission_camera_rationale">A gázóra fotózásához kamera engedélyre van szükség</string>
    <string name="permission_calendar_rationale">Az emlékeztető beállításához naptár engedélyre van szükség</string>
    <string name="permission_denied">Engedély megtagadva</string>
    <string name="reminder_title">Gázóra leolvasás emlékeztető</string>
    <string name="reminder_description">Ne felejtse el leolvasni a gázóra állását!</string>
    <string name="reminder_set">Emlékeztető beállítva: %1$s</string>
    <string name="photo_saved">Fotó elmentve</string>
    <string name="error_saving_photo">Hiba a fotó mentésekor</string>
    <string name="error_setting_reminder">Hiba az emlékeztető beállításakor</string>
</resources>